--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -156,6 +156,14 @@ header{
     margin-top: -10px;
 }
 
+.profile {
+    opacity: 0.7;
+}
+
+.profile:hover {
+    opacity: 1;
+}
+
 .quick-menu {
     float: right;
     margin-top: -30px;
@@ -168,11 +176,12 @@ header{
 .project-box {
     width: 31%;
     height: 100%;
-    float: left;
     margin-left: 1.42857rem;
     margin-bottom: 25px;
     background-color: white;
-    box-shadow: 0px 2px 0px 0px rgba(50, 50, 50, 0.5)
+    box-shadow: 0px 2px 0px 0px rgba(50, 50, 50, 0.5);
+    display: inline-block;
+    vertical-align:top;
 }
 
 article {
