--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -173,9 +173,16 @@ header{
 
 /* Project box */
 
+.grid-sizer{
+    width:33%;
+}
+
+.gutter-sizer{
+    width: 4%;
+}
+
 .project-box {
     width: 31%;
-    height: 100%;
     margin-left: 1.42857rem;
     margin-bottom: 25px;
     background-color: white;
