pinterest layout done

--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -135,8 +135,8 @@ header{
 }
 
 .container{
-    padding: 1.78571rem 0 0;
-    margin: 0 auto;
+    padding: 60px 0 0;
+    margin:  auto;
     max-width: 91.42857rem;
 
 }
