--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -1,6 +1,6 @@
 body{
     background: #fff;
-    font-family: "Sun Regular", sans-serif;
+    font-family: "SunAntwerpen", sans-serif;
 }
 
 html{
@@ -213,6 +213,21 @@ i{
     border-right: 1px solid #E5E5E6;
 }
 
+@media only screen and (max-width: 900px){
+    .project-box {
+        padding: 0;
+        width: 60%;
+        margin-left: 1rem;
+        margin-bottom: 25px;
+        background-color: #F5F5F6;
+        display: inline-block;
+        vertical-align:top;
+        border-top: 1px solid #E5E5E6;
+        border-left: 1px solid #E5E5E6;
+        border-right: 1px solid #E5E5E6;
+    }
+}
+
 .project-box a.footer-link{
     font-weight: 700;
     line-height: 3rem;
@@ -220,6 +235,7 @@ i{
     color: black;
     float: right;
     padding-right: .5rem;
+    font-family: "SunAntwerpen";
 }
 
 .project-box a.footer-link:hover{
@@ -239,9 +255,12 @@ time {
 
 .project-box-footer{
     min-height: 3rem;
+
     border-top: 1px solid #BABABA;
     border-bottom: 2px solid #E5E5E5;
 }
+
+
 
 .project-box img {
     width: 100%;
