--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -207,7 +207,7 @@ i{
     padding: 0;
     width: 31%;
     /*margin-left: 1.42857rem;*/
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.2rem;
     background-color: #F5F5F6;
     display: inline-block;
     vertical-align:top;
@@ -270,7 +270,7 @@ time {
 }
 
 .grid{
-    margin-top: 10px;
+    margin-top: 1.2rem;
 }
 
 /* single project page */
@@ -284,7 +284,7 @@ time {
     border-left: 1px solid #E5E5E6;
     border-right: 1px solid #E5E5E6;
     border-bottom: 2px solid #BABABA;
-    margin-top: 10px;
+    margin-top: 1.2rem;
     width: 60%;
     height: auto;
     margin-left: auto;
@@ -300,7 +300,7 @@ time {
     transition: transform .2s linear;
 }
 
-.meerlezen:hover::before { 
+.meerlezen:hover::before {
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
     transform: rotate(180deg);
