Timeline and project page design and logica
Tijdlijn kan dingen uit database halen en de tijdlijn werkt afhankelijk
van de database data. Dus pagina kan zichzelf genereren. Enkel nog de
kleuren van de fases aanpassen

--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -296,9 +296,9 @@ time {
     content: "+";
     padding: 1px;
     color: #000;
-    -webkit-transition: -webkit-transform .2s linear;
-    -moz-transition: -moz-transform .2s linear;
-    transition: transform .2s linear;
+    -webkit-transition: -webkit-transform 1s linear;
+    -moz-transition: -moz-transform 1s linear;
+    transition: transform 1s linear;
 }
 
 .meerlezen:hover::before {
