--- a/Website/antwerpen-website/public/css/vertical-timeline-css.css
+++ b/Website/antwerpen-website/public/css/vertical-timeline-css.css
@@ -105,15 +105,19 @@ Main components
   border-radius: 50%;
   box-shadow: 0 0 0 4px white, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
 }
-.cd-timeline-img img {
+.cd-timeline-img span {
   display: block;
   width: 24px;
   height: 24px;
   position: relative;
-  left: 50%;
+  left: 55%;
   top: 50%;
   margin-left: -12px;
   margin-top: -12px;
+  font-weight: 700;
+  color: white;
+  font-size: 1.3rem;
+  font-family: "SunAntwerpen", sans-serif;
 }
 .cd-timeline-img.cd-picture {
   background: #75ce66;
