--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -189,11 +189,14 @@ a:hover{
 }
 
 .quick-menu a{
+    padding: 17px;
     color: white;
+
 }
 
 .quick-menu a:hover{
-    color: #E5E5E5;
+    color: #2C5697;
+    background-color: white;
 }
 
 i{
