--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -217,6 +217,7 @@ i{
     border-top: 1px solid #E5E5E6;
     border-left: 1px solid #E5E5E6;
     border-right: 1px solid #E5E5E6;
+    border-bottom: 2px solid #BABABA;
 }
 
 @media only screen and (max-width: 900px){
@@ -261,9 +262,7 @@ time {
 
 .project-box-footer{
     min-height: 3rem;
-
     border-top: 1px solid #BABABA;
-    border-bottom: 2px solid #E5E5E5;
 }
 
 
