--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -186,6 +186,8 @@ a:hover{
 .quick-menu {
     float: right;
     margin-top: -30px;
+    z-index: 100;
+    position: relative;
 }
 
 .quick-menu a{
