--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -206,6 +206,33 @@ i{
     padding-left: 5px;
 }
 
+/* Carousel */
+
+.carousel{
+    margin-top: 1.2rem;
+    width: 100%;
+    height: 350px;
+    overflow: hidden;
+}
+
+.carousel div img{
+    position: relative;
+    width: 90%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: -1;
+
+}
+
+
+.overlay{
+    position: absolute;
+    top: 400px;
+    width: 100%;
+    z-index: 2;
+}
+
 /* Project box */
 
 .project-box {
