--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -38,6 +38,10 @@ i{
     padding-left: 5px;
 }
 
+#content{
+    padding: 0;
+}
+
 .thumbnail{
     display:block;
     padding: 0;
@@ -47,5 +51,4 @@ i{
     border: none;
     border-radius: 0;
     transition: none;
-
 }
