--- a/Website/antwerpen-website/public/css/nav-bar.css
+++ b/Website/antwerpen-website/public/css/nav-bar.css
@@ -9,6 +9,10 @@
     border-radius: 0;
 }
 
+.navbar-brand{
+    padding: 0;
+}
+
 .navbar-brand img{
     max-width: 100px;
 }
@@ -25,12 +29,19 @@
     height: 100%;
 }
 
+
+
 #navbar-login a{
     color: white;
     height: 100%;
 }
 
 #navbar-login a:hover{
-    color: #2C5697;
-    background-color: white;
+    /*color: #2C5697;*/
+    /*background-color: white;*/
+    text-decoration: underline;
+}
+
+.nav>li>a:focus, .nav>li>a:hover {
+    background: none;
 }
