--- a/Website/antwerpen-website/public/css/project-box.css
+++ b/Website/antwerpen-website/public/css/project-box.css
@@ -2,7 +2,7 @@
 
 .project-box {
     padding: 0;
-    /*width: 31%;*/
+    width: 90%;
     /*margin-left: 1.42857rem;*/
     margin-bottom: 1.2rem;
     background-color: #F5F5F6;
@@ -12,6 +12,8 @@
     border-left: 1px solid #E5E5E6;
     border-right: 1px solid #E5E5E6;
     border-bottom: 2px solid #BABABA;
+    margin-left: auto;
+    margin-right: 10px;
 }
 
 
