--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -1,6 +1,6 @@
 body{
     background: #fff;
-    font-family: "SunAntwerpen", sans-serif;
+    font-family: "Sun-Antwerpen 500", sans-serif;
     padding-top: 8rem;
 }
 
