--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -37,6 +37,15 @@ i{
     padding-right: 10px;
     padding-left: 5px;
 }
+.navbar-nav>li>#page-title{
+    padding: 30.5px;
+}
+
+.navbar-nav>li>a>h1{
+    color: white;
+    font-family: "Antwerpen";
+    margin: 0;
+}
 
 #content{
     padding: 0;
