--- a/Website/antwerpen-website/public/css/project-page.css
+++ b/Website/antwerpen-website/public/css/project-page.css
@@ -16,3 +16,15 @@
     margin-right: auto;
     background: #F5F5F6;
 }
+
+.project-big-box i.fa.fa-plus{
+    color: black;
+}
+
+.project-big-box i.fa.fa-check{
+    color: white;
+}
+
+.project-big-box i{
+    width: 30px;
+}
