Button Bug fixed

--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -107,7 +107,7 @@ i{
     }
 }
 
-*{
+#grid>div{
     -webkit-transition:all 0.5s ease;
     -moz-transition:all 0.5s ease;
     -o-transition:all 0.5s ease;
