--- a/Website/antwerpen-website/public/css/master.css
+++ b/Website/antwerpen-website/public/css/master.css
@@ -113,3 +113,7 @@ i{
     -o-transition:all 0.5s ease;
     transition:all 0.5s ease;
 }
+
+.form-horizontal .control-label{
+    text-align: left;
+}
