--- a/Website/antwerpen-website/public/css/project-box.css
+++ b/Website/antwerpen-website/public/css/project-box.css
@@ -6,8 +6,9 @@
     border-radius: 0;
 }
 
-#filter-btn{
+.btn-group{
     float: right;
+    margin-left: 10px;
 }
 
 /* Project box */
@@ -64,8 +65,6 @@ time {
     min-height: 3rem;
     border-top: 1px solid #BABABA;
 }
-
-
 
 .project-box img {
     width: 100%;
