--- a/Website/antwerpen-website/public/css/project-box.css
+++ b/Website/antwerpen-website/public/css/project-box.css
@@ -70,8 +70,7 @@ time {
     width: 100%;
 }
 
-.meerlezen::before {
-    content: "+";
+.meerlezen_plus {
     padding: 1px;
     color: #000;
     -webkit-transition: -webkit-transform 0.2s linear;
@@ -79,7 +78,7 @@ time {
     transition: transform 0.2s linear;
 }
 
-.meerlezen:hover::before {
+.meerlezen:hover .meerlezen_plus {
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
     transform: rotate(180deg);
