--- a/Website/antwerpen-website/public/css/project-page.css
+++ b/Website/antwerpen-website/public/css/project-page.css
@@ -32,7 +32,6 @@
 .cd-timeline-question-form{
     height: 500px;
     display: none;
-
 }
 
 #following-btn{
@@ -41,4 +40,18 @@
 
 .cd-read-less{
     display: none;
+}
+
+.title-with-follow{
+    width: 100%;
+    height: 3rem;
+}
+
+.title-with-follow h1{
+    float: left;
+    margin: 0;
+}
+
+.title-with-follow a{
+    float: right;
 }
