Vragen reveal en rework meer lezen op project pagina

--- a/Website/antwerpen-website/public/css/project-page.css
+++ b/Website/antwerpen-website/public/css/project-page.css
@@ -32,10 +32,7 @@
 .cd-timeline-question-form{
     height: 500px;
     display: none;
-}
-
-.cd-read-less{
-    display: none;
+    margin-top: 70px;
 }
 
 .title-with-follow{
@@ -49,5 +46,9 @@
 }
 
 .title-with-follow button{
+    float: right;
+}
+
+#form-reveal{
     float: right;
 }
